added header structure

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <nav class="navbar">
+            <div class="navbar-logo"> ciao</div>
+            <div class="navbar-menu">
+                <div class="navbar-menu-left"> ciao</div>
+                <div class="navbar-menu-center"> ciao</div>
+                <div class="navbar-menu-right"> ciao</div>
+            </div>
+        </nav>
+    </header>
+
+
+    <!-- Main -->
+    <!-- Footer -->
+
 </body>
 </html>
