change header structure

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <!-- Header -->
     <header>
         <nav class="navbar">
-            <div class="navbar-logo"> ciao</div>
-            <div class="navbar-menu">
-                <div class="navbar-menu-left"> ciao</div>
-                <div class="navbar-menu-center"> ciao</div>
-                <div class="navbar-menu-right"> ciao</div>
+            <div class="navbar navbar-part-left">
+                <div class="logo"></div>
+                <div class="actions"></div>
+            </div>
+            <div class="navbar navbar-part-center"></div>
+            <div class="navbar navbar-part-right">
+                <div class="actions"></div>
             </div>
         </nav>
     </header>
