added jumbotron structure

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <!-- Header -->
     <header>
+        <!-- Navbar -->
         <nav class="navbar">
             <div class="navbar navbar-part-left">
                 <div class="logo"></div>
@@ -30,7 +31,26 @@
                 <div class="actions"></div>
             </div>
         </nav>
+
+        <!-- Jumbotron -->
+        <div class="jumbotron large-container">
+            <div class="jumbotron-title">
+                <h1></h1>
+            </div>
+            <div class="jumbotron-content">
+                <div class="jumbotron-content-description">
+                    <p></p>
+                    <button></button>
+                    <p></p>
+                    <i></i> 
+                </div>
+                <div class="jumbotron-content-image">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </header>
+    
 
 
     <!-- Main -->
