added section-plan structure

--- a/index.html
+++ b/index.html
@@ -50,10 +50,38 @@
             </div>
         </div>
     </header>
-    
-
 
     <!-- Main -->
+    <main>
+        <!-- Section-plan -->
+        <section>
+            <div class="small-container section-plan">
+                <div class="title-section">
+                    <h3>Ciao</h3>
+                </div>
+                <div class="choice-billing"></div>
+                <div class="vertical-row">
+                    <div class="column"></div>
+                    <div class="column"></div>
+                    <div class="column"></div>
+                </div>
+                <div class="horizontal-row"></div>
+                <div class="partner-dropbox">
+                    <div class="partner-dropbox-img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="partner-dropbox-content">
+                        <h5></h5>
+                        <p></p>
+                        <button></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
     <!-- Footer -->
 
 </body>
