added section-operations structure

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Section-plan -->
         <section>
             <div class="small-container section-plan">
-                <div class="title-section">
+                <div class="section-title section-plan-title">
                     <h3>Ciao</h3>
                 </div>
                 <div class="choice-billing"></div>
@@ -74,6 +74,44 @@
                         <h5></h5>
                         <p></p>
                         <button></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Section-operations -->
+        <section class="section-dimension-general">
+            <div class="small-container section-operations">
+                <div class="section-title section-operations-title">
+                    <h3>Titolo</h3>
+                </div>
+                <div class="row-operations">
+                    <div class="column-operations">
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="" alt="">
+                            </div>
+                            <div class="card-operations-content">
+                                <h1>ciao</h1>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column-operations">
+                        <div class="card-operations"></div>
+                    </div>
+                    <div class="column-operations">
+                        <div class="card-operations"></div>
+                    </div>
+                </div>
+                <div class="row-operations">
+                    <div class="column-operations">
+                        <div class="card-operations"></div>
+                    </div>
+                    <div class="column-operations">
+                        <div class="card-operations"></div>
+                    </div>
+                    <div class="column-operations">
+                        <div class="card-operations"></div>
                     </div>
                 </div>
             </div>
