--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                 </div>
             </div>
         </section>
+        <!-- Section Team -->
+        <section class="section-dimension-general">
+            <div class="small-container section-team">
+                <div class="section-title section-team-title">
+                    <h3>Titolo</h3>
+                </div>
+                <div class="section-team-content">
+                    <a href="#"></a>
+                </div>
+            </div>
+        </section>
     </main>
 
 
