added section-asset-square structure

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </section>
-        <!-- Section Team -->
+        <!-- Section-team -->
         <section class="section-dimension-general">
             <div class="small-container section-team">
                 <div class="section-title section-team-title">
@@ -124,6 +124,48 @@
                 </div>
                 <div class="section-team-content">
                     <a href="#"></a>
+                </div>
+            </div>
+        </section>
+        <!-- Section-asset-square -->
+        <section>
+            <div class="section-asset-square">
+                <div class="row-square">
+                    <div class="column-square-left">
+                        <div class="card-square-over">
+                            <div id="designit-green" class="square"></div>
+                            <div id="arizona" class="square"></div> 
+                        </div>
+                        <div class="card-square-bottom">
+                            <div id="florida" class="square"></div>
+                            <div id="topps" class="square"></div>
+                        </div>
+                    </div>
+                    <div class="column-square-center">
+                        <div class="card-square">
+                            <div class="card-square-img">
+                                <img src="" alt="">
+                            </div>
+                            <p></p>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="column-square-right">
+                        <div class="card-square-over">
+                            <div id="world-bycicle" class="square"></div>
+                            <div id="hearst" class="square"></div> 
+                        </div>
+                        <div class="card-square-bottom">
+                            <div id="lonely-planet" class="square"></div>
+                            <div id="clear-channel" class="square"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="dropbox-company">
+                <div class="dropbox-company-content small-container">
+                    <h3 class="dropbox-company-content-title">Prova</h3>
+                    <button class="dropbox-company-content-button">prova</button>
                 </div>
             </div>
         </section>
