--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
                 </div>
             </div>
         </section>
+        <!-- Section FAQ -->
+        <section class="section-dimension-general">
+            <div class="small-container section-faq">
+                <div class="section-title section-faq-title"></div>
+                <div class="usual-faq">
+                    <p>ciao</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="usual-faq">
+                    <p>ciao</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="usual-faq">
+                    <p>ciao</p>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+        </section>
     </main>
 
 
