added footer structure

--- a/index.html
+++ b/index.html
@@ -189,9 +189,26 @@
         </section>
     </main>
 
-
-
     <!-- Footer -->
-
+    <footer>
+        <div class="large-container">
+            <div class="footer-content">
+                <div class="footer-top">
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                </div>
+                <div class="footer-bottom">
+                    <div class="footer-bottom-content">
+                        <i class="fa-solid fa-earth-americas"></i>
+                        <span class="language">Italiano</span>
+                        <span>&blacktriangle;</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
