added contents to header

--- a/index.html
+++ b/index.html
@@ -23,33 +23,50 @@
         <!-- Navbar -->
         <nav class="navbar">
             <div class="navbar navbar-part-left">
-                <div class="logo"></div>
-                <div class="actions"></div>
+                <div class="logo">
+                    <img src="img/logo-small.png" alt="logo dropbox">
+                </div>
+                <div class="actions">
+                    <ul>
+                        <li>Perchè Dropbox</li>
+                        <li>Funzioni</li>
+                        <li>Piani e Prezzi</li>
+                    </ul>
+                </div>  
             </div>
             <div class="navbar navbar-part-center"></div>
             <div class="navbar navbar-part-right">
-                <div class="actions"></div>
+                <div class="actions">
+                    <ul>
+                        <li>Supporto</li>
+                        <li>Contatta l'ufficio vendite</li>
+                        <li>Accedi</li>
+                        <li><button class="button-nav">Inizia</button></li>
+                    </ul> 
+                </div>
             </div>
         </nav>
-
-        <!-- Jumbotron -->
-        <div class="jumbotron large-container">
-            <div class="jumbotron-title">
-                <h1></h1>
-            </div>
-            <div class="jumbotron-content">
-                <div class="jumbotron-content-description">
-                    <p></p>
-                    <button></button>
-                    <p></p>
-                    <i></i> 
+    </header>
+    
+    <!-- Jumbotron -->
+        <div class="jumbotron-background">
+            <div class="large-container">
+                <div class="jumbotron-title">
+                    <h1>tutto</h1>
                 </div>
-                <div class="jumbotron-content-image">
-                    <img src="" alt="">
+                <div class="jumbotron-content">
+                    <div class="jumbotron-content-description">
+                        <p></p>
+                        <button></button>
+                        <p></p>
+                        <i></i> 
+                    </div>
+                    <div class="jumbotron-content-image">
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
 
     <!-- Main -->
     <main>
