added contents to jumbotron

--- a/index.html
+++ b/index.html
@@ -41,35 +41,36 @@
                         <li>Supporto</li>
                         <li>Contatta l'ufficio vendite</li>
                         <li>Accedi</li>
-                        <li><button class="button-nav">Inizia</button></li>
+                        <li><button class="button button-nav button-blue">Inizia</button></li>
                     </ul> 
                 </div>
             </div>
         </nav>
     </header>
     
-    <!-- Jumbotron -->
+
+    <!-- Main -->
+    <main>
+        <!-- Jumbotron -->
         <div class="jumbotron-background">
             <div class="large-container">
-                <div class="jumbotron-title">
-                    <h1>tutto</h1>
+                <div class="jumbotron-title mb-20">
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 </div>
                 <div class="jumbotron-content">
                     <div class="jumbotron-content-description">
-                        <p></p>
-                        <button></button>
-                        <p></p>
-                        <i></i> 
+                        <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. </p>
+                        <button class="button button-blue mb-20">Inizia la tua prova gratuita</button>
+                        <p class="mb-40">Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down fa-2x"></i>
                     </div>
                     <div class="jumbotron-content-image">
-                        <img src="" alt="">
+                        <img src="img/jumbo.png" alt="immagine jumbotron">
                     </div>
                 </div>
             </div>
         </div>
 
-    <!-- Main -->
-    <main>
         <!-- Section-plan -->
         <section>
             <div class="small-container section-plan">
