added section-plan contents

--- a/index.html
+++ b/index.html
@@ -75,21 +75,129 @@
         <section>
             <div class="small-container section-plan">
                 <div class="section-title section-plan-title">
-                    <h3>Ciao</h3>
+                    <h3>Trova il piano business che fa per te</h3>
                 </div>
-                <div class="choice-billing"></div>
+                <div class="choice-billing">
+                    <ul>
+                        <li><span class="circle circle-blue"></span> Fatturazione mensile</li>
+                        <li><span class="circle circle-white"></span> Fatturazione annuale</li>
+                    </ul>
+                </div>
                 <div class="vertical-row">
-                    <div class="column"></div>
-                    <div class="column"></div>
-                    <div class="column"></div>
+                    <div class="column">
+                        <div class="customer-plan mb-20"><i class="fa-solid fa-user"></i> Singolo</div>
+                        <div class="customer-plan-type mb-30 pl-20">
+                            <h4 class="mb-10">Professional</h4>
+                            <ul>
+                                <li class="mb-5"><strong>€ 12.00</strong></li>
+                                <li>/mese</li>
+                            </ul>
+                        </div>
+                        <div class="customer-plan-features mb-20 pl-20">
+                            <ul>
+                                <li class="mb-10"><i class="fa-solid fa-user"></i> 1 utente</li>
+                                <li class="mb-10"><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                                <li><i class="fa-solid fa-circle-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>  
+                            </ul>
+                        </div>
+                        <div class="customer-plan-test">
+                            <button class="button-blue button-special mb-10"> Prova gratis per 30 giorni </button>
+                        </div>
+                        <div class="customer-plan-buynow pl-20 mb-50">
+                            <span class="border-special">oppure</span> <a href="#">acquista ora</a>
+                        </div>
+                        <div class="customer-plan-highlights pl-20">
+                            <h5 class="mb-10">Punti Salienti del piano</h5>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Invia file fino a 100GB con Dropbox Transfert</li>
+                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="customer-plan mb-20"><i class="fa-solid fa-users"></i> Team</div>
+                        <div class="customer-plan-type mb-30 pl-20">
+                            <h4 class="mb-10">Advanced</h4>
+                            <ul>
+                                <li class="mb-5"><strong>€ 18.00</strong></li>
+                                <li>/mese</li>
+                            </ul>
+                        </div>
+                        <div class="customer-plan-features mb-20 pl-20">
+                            <ul>
+                                <li class="mb-10"><i class="fa-solid fa-users"></i> 3 o più utenti</li>
+                                <li class="mb-10"><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team</li>
+                                <li><i class="fa-solid fa-circle-nodes"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                                   
+                            </ul>
+                        </div>
+                        <div class="customer-plan-test">
+                            <button class="button-blue button-special mb-10"> Prova gratis per 30 giorni </button>
+                        </div>
+                        <div class="customer-plan-buynow pl-20 mb-50">
+                            <span class="border-special">oppure</span> <a href="#">acquista ora</a>
+                        </div>
+                        <div class="customer-plan-highlights pl-20">
+                            <h5 class="mb-10">Punti Salienti del piano</h5>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Nessun limite di spazio per i file</li>
+                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                <li><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</li>
+                                <li><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="customer-plan mb-20"><i class="fa-solid fa-building"></i> Azienda</div>
+                        <div class="customer-plan-type mb-30 pl-20">
+                            <h4 class="mb-10">Enterprise</h4>
+                            <ul>
+                                <li class="mb-5"><strong> Contattaci</strong></li>
+                            </ul>
+                        </div>
+                        <div class="customer-plan-features mb-20 pl-20">
+                            <ul>
+                                <li class="mb-10"><i class="fa-solid fa-user"></i> 10 o più utenti</li>
+                                <li class="mb-10"><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda</li>
+                                <li><i class="fa-solid fa-circle-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                            </ul>
+                        </div>
+                        <div class="customer-plan-test">
+                            <button class="button-blue button-special mb-10"> Contattaci </button>
+                        </div>
+                        <div class="customer-plan-buynow pl-20 mb-50">
+                            <span class="border-special">oppure</span> <a href="#">acquista ora</a>
+                        </div>
+                        <div class="customer-plan-highlights pl-20">
+                            <h5 class="mb-10">Punti Salienti del piano</h5>
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check"></i> Servizio assistenza 24/h</li>
+                                <li><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="horizontal-row"></div>
+                <div class="horizontal-row">
+                    <div class="customer-plan mb-20"><i class="fa-solid fa-building"></i> Team</div>
+                    <div class="customer-plan-type-horizontal pl-20 pr-20">
+                        <h4 class="mb-10">Enterprise</h4>
+                        <button class="button-blue button-special mb-10"> Contatta l'ufficio vendite</button>
+                    </div>
+                    <div class="customer-plan-horizontal-content pl-20">
+                        <ul>
+                            <li class="mb-30"><strong> Contatta l'ufficio vendite per i prezzi</strong></li>
+                        </ul>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                    </div>
+                </div>
                 <div class="partner-dropbox">
                     <div class="partner-dropbox-img">
-                        <img src="" alt="">
+                        <img src="img/partner.png" alt="partner-dropbox">
                     </div>
                     <div class="partner-dropbox-content">
-                        <h5></h5>
+                        <h4>Entra in contatto con un partner Dropbox</h4>
                         <p></p>
                         <button></button>
                     </div>
