added partner-dropbox content

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                         <img src="img/partner.png" alt="partner-dropbox">
                     </div>
                     <div class="partner-dropbox-content">
-                        <h4>Entra in contatto con un partner Dropbox</h4>
-                        <p></p>
-                        <button></button>
+                        <h4 class="mb-10">Entra in contatto con un partner Dropbox</h4>
+                        <p class="mb-20">Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <button class="button button-grey">Trova un partner</button>
                     </div>
                 </div>
             </div>
