added contents to section operations & team

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
                     <div class="partner-dropbox-content">
                         <h4 class="mb-10">Entra in contatto con un partner Dropbox</h4>
-                        <p class="mb-20">Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <p class="p-little mb-20">Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
                         <button class="button button-grey">Trova un partner</button>
                     </div>
                 </div>
@@ -208,36 +208,76 @@
         <section class="section-dimension-general">
             <div class="small-container section-operations">
                 <div class="section-title section-operations-title">
-                    <h3>Titolo</h3>
+                    <h3>Esegui più operazioni con Dropbox Business</h3>
                 </div>
                 <div class="row-operations">
                     <div class="column-operations">
                         <div class="card-operations">
                             <div class="card-operations-img">
-                                <img src="" alt="">
+                                <img src="img/business-feature-switching-tools.png" alt="img dropbox business">
                             </div>
                             <div class="card-operations-content">
-                                <h1>ciao</h1>
-                                <p></p>
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                             </div>
                         </div>
                     </div>
                     <div class="column-operations">
-                        <div class="card-operations"></div>
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="img/business-feature-send-files-it.png" alt="img dropbox business">
+                            </div>
+                            <div class="card-operations-content">
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="column-operations">
-                        <div class="card-operations"></div>
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="img/business-feature-coordinate-it.png" alt="img dropbox business">
+                            </div>
+                            <div class="card-operations-content">
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row-operations">
                     <div class="column-operations">
-                        <div class="card-operations"></div>
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="img/business-feature-integrations-it.png" alt="img dropbox business">
+                            </div>
+                            <div class="card-operations-content">
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="column-operations">
-                        <div class="card-operations"></div>
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="img/business-feature-multi-device.png" alt="img dropbox business">
+                            </div>
+                            <div class="card-operations-content">
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="column-operations">
-                        <div class="card-operations"></div>
+                        <div class="card-operations">
+                            <div class="card-operations-img">
+                                <img src="img/business-feature-security.png" alt="img dropbox business">
+                            </div>
+                            <div class="card-operations-content">
+                                <h4 class="mb-10">Passa di meno da uno strumento all'altro</h4>
+                                <p class="p-little">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti Cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -245,11 +285,11 @@
         <!-- Section-team -->
         <section class="section-dimension-general">
             <div class="small-container section-team">
-                <div class="section-title section-team-title">
-                    <h3>Titolo</h3>
+                <div class="section-title section-team-title mb-30">
+                    <h3>Più di 500.000 team utilizzano Dropbox Business</h3>
                 </div>
                 <div class="section-team-content">
-                    <a href="#"></a>
+                    <a href="#">Scopri di più sui nostri clienti</a>
                 </div>
             </div>
         </section>
