added contents section-asset square

--- a/index.html
+++ b/index.html
@@ -299,39 +299,60 @@
                 <div class="row-square">
                     <div class="column-square-left">
                         <div class="card-square-over">
-                            <div id="designit-green" class="square"></div>
-                            <div id="arizona" class="square"></div> 
+                            <div class="content-square bg-green">
+                                <img src="img/designit.svg" alt="designit green">
+                            </div>
+                            <div class="content-square bg-bordeaux">
+                                <img src="img/arizona_state_university.svg" alt="arizona state">
+                            </div> 
                         </div>
                         <div class="card-square-bottom">
-                            <div id="florida" class="square"></div>
-                            <div id="topps" class="square"></div>
+                            <div class="content-square bg-light-blue">
+                                <img id="florida" src="img/university_of_florida.svg" alt="florida">
+                            </div>
+                            <div class="content-square bg-bright-red">
+                                <img src="img/topps.svg" alt="topps">
+                            </div>
                         </div>
                     </div>
                     <div class="column-square-center">
-                        <div class="card-square">
-                            <div class="card-square-img">
-                                <img src="" alt="">
+                        <div class="card-square pl-20 pt-20">
+                            <div class="card-square-img mb-20">
+                                <img src="img/designit.svg" alt="designit-grey">
                             </div>
-                            <p></p>
-                            <div></div>
+                            <div class="border-empty mb-20"></div>
+                            <p class="p-little paragraph-square mb-20">I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                            <div class="p-little">Morten Thomsen, Global IT Lead</div>
                         </div>
                     </div>
                     <div class="column-square-right">
                         <div class="card-square-over">
-                            <div id="world-bycicle" class="square"></div>
-                            <div id="hearst" class="square"></div> 
+                            <div class="content-square bg-red">
+                                <img src="img/world_bicycle_relief.svg" alt="world-bycicle">
+                            </div>
+                            <div class="content-square bg-light-light-blue">
+                                <img src="img/hearst_corp.svg" alt="hearst">
+                            </div> 
                         </div>
                         <div class="card-square-bottom">
-                            <div id="lonely-planet" class="square"></div>
-                            <div id="clear-channel" class="square"></div>
+                            <div class="content-square bg-dark-blue">
+                                <img src="img/lonely_planet.svg" alt="lonely planet">
+                            </div>
+                            <div class="content-square bg-yellow">
+                                <img src="img/clear_channel.svg" alt="clear channel">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="dropbox-company">
                 <div class="dropbox-company-content small-container">
-                    <h3 class="dropbox-company-content-title">Prova</h3>
-                    <button class="dropbox-company-content-button">prova</button>
+                    <div class="dropbox-company-content-title">   
+                        <h3>Porta Dropbox Business nella tua azienda.</h3>
+                    </div>
+                    <div class="dropbox-company-content-button">
+                        <button class="button">Inizia la tua prova gratuita</button>
+                    </div>
                 </div>
             </div>
         </section>
